--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <title>Node {{node_id}}</title>
 </head>
-<body>
     <h1>Node {{node_id}}</h1>
 	OMG you can search for an ID!!!
 	<form action="/closest_nodes" method="GET">
-        <input type="text" name="text">
+        <input type="text" name="node_id">
         <input type="submit" name="my-form" value="Send">
     </form>
+    {% if search_result is not none %}
+        <table border="1">
+            {% for node in search_result %}
+                <tr><td><a href="http://{{node}}">
+								{{node.node_id}}</a></td></tr>
+            {% endfor %}
+        </table>
+    {% endif %}
+    <br/>
 	<table border="1">
 		{% for i, bucket in buckets %}
 			<tr>
