--- a/milestone3/templates/template.html
+++ b/milestone3/templates/template.html
@@ -5,7 +5,8 @@
     <title>Node {{node_id}}</title>
 </head>
     <h1>Node {{node_id}}</h1>
-	OMG you can search for an ID!!!
+
+	Search for an ID:
 	<form action="/closest_nodes" method="GET">
         <input type="text" name="node_id">
         <input type="submit" name="my-form" value="Send">
@@ -18,7 +19,25 @@
             {% endfor %}
         </table>
     {% endif %}
+	<br/>
+
+	Search for a key:
+	<form action="/get_value" method="GET">
+        <input type="text" name="key">
+        <input type="submit" name="my-form" value="Send">
+    </form>
+	<br/>
+
+	Store a key/value pair:
+	<form action="/store_value" method="POST">
+        Key: <input type="text" name="key"> <br>
+        Value: <input type="text" name="value">
+        <input type="submit" name="my-form" value="Send">
+    </form>
     <br/>
+
+
+	Buckets:
 	<table border="1">
 		{% for i, bucket in buckets %}
 			<tr>
@@ -35,5 +54,28 @@
 			</tr>
 		{% endfor %}
 	</table>
+    <br/>
+
+	Key/Value pairs:
+	<table border="1">
+		{% for i, bucket in buckets %}
+			<tr>
+				<td>Bucket {{ i }}:</td>
+				<td>
+					{% for contact in bucket %}
+						<div>
+							<a href="http://{{contact}}">
+								{{contact.node_id}}
+							</a>
+						</div>
+					{% endfor %}
+				</td>
+			</tr>
+		{% endfor %}
+	</table>
+    <br/>
+
+
+
 </body>
 </html>
