--- a/milestone3/templates/template.html
+++ b/milestone3/templates/template.html
@@ -58,18 +58,10 @@
 
 	Key/Value pairs:
 	<table border="1">
-		{% for i, bucket in buckets %}
+		{% for key, value in kv_pairs %}
 			<tr>
-				<td>Bucket {{ i }}:</td>
-				<td>
-					{% for contact in bucket %}
-						<div>
-							<a href="http://{{contact}}">
-								{{contact.node_id}}
-							</a>
-						</div>
-					{% endfor %}
-				</td>
+				<td> {{key}}</td>
+				<td> {{value}}</td>
 			</tr>
 		{% endfor %}
 	</table>
